--- a/Dplyr_Presentation.html
+++ b/Dplyr_Presentation.html
@@ -859,7 +859,9 @@ hljs.initHighlightingOnLoad();
 <div class="slideContent" >
 <p>Let&#39;s use an example of the popular Diamonds dataset.</p>
 
-<pre><code class="r">install.packages(&quot;nycflights13&quot;)
+<pre><code class="r"># packages to install 
+install.packages(&quot;dplyr&quot;)
+install.packages(&quot;ggplot2&quot;)
 </code></pre>
 
 <pre><code class="r">library(ggplot2)
